# ProjectBoilerPlate

./: .gitignore  README.md  cmd.sh  docker-compose.yml  note.md  production.yml
project/: .flake8  Dockerfile  README.md  manage.py  pyproject.toml
project/app/: app.py
project/config/: config.json  config.prod.json
project/demo/: app.py
project/docs/: package.commons.cache_tools.rst  package.models.rst  package.module1.config.rst
project/docs/_build/doctrees/: Note.doctree  environment.pickle  index.doctree  manage.doctree  modules.doctree  package.api.doctree  package.commons.cache_tools.doctree  package.commons.doctree  package.commons.logging.doctree  package.commons.tuner.doctree  package.commons.utils.doctree  package.config.doctree  package.doctree  package.main.doctree  package.models.doctree  package.module1.api.doctree  package.module1.config.doctree  package.module1.doctree  package.module1.main.doctree  package.module1.models.doctree  package.module1.sub.doctree  package.module1.tests.doctree  package.module1.tests.test_api.doctree  section1.doctree
project/docs/_build/html/: .buildinfo  Note.html  genindex.html  index.html  manage.html  modules.html  objects.inv  package.api.html  package.commons.html  (+20 more)
project/notebooks/: 220701_ファイル名は結論.ipynb
project/package/: __init__.py  config.py  constants.py  exceptions.py  main.py  sub.py
project/package/common/: cache_tools.py  datetime_util.py  logging.py  modelCV.py  setup.py  setup_logger.py  timer.py  utils.py
project/package/commons/: cache_tools.py
project/package/module1/: api.py  config.py
(+446 files in other folders)
