[tool.poetry]
name = "package"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.1.1"
pandas = "^1.4.3"
numpy = "^1.23.1"
modin = "^0.15.2"
ray = "^1.13.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.4"
Sphinx = "^5.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
