[tool.poetry]
name = "package"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.1.1"
pandas = "^1.4.3"
numpy = "^1.23.1"
modin = "^0.15.2"
ray = "^1.13.0"
streamlit = "^1.11.1"
pydantic = "^1.9.1"
optuna = "^2.10.1"
lightgbm = "^3.3.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.4"
Sphinx = "^5.1.1"
pytest = "^7.1.2"
flake8 = "^5.0.4"
myst-parser = "^0.18.0"
sphinx-rtd-theme = "^1.0.0"
nbsphinx = "^0.8.9"
sphinxcontrib-mermaid = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 98

[tool.isort]
profile = "black"
line_length = 98
